--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "web-vitals": "^2.1.4",
     "@mdi/js": "7.3.67"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
